--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
 						</button>
 						<button id="Loginbutton" onclick="LoginFunction()">
 							<btn>Login </btn>
-						</button>
-		<image src="lifepac.jpeg">
-
-
+						</button>			
 	</div>
 
 	<div id="footer">
@@ -513,7 +510,7 @@
 			<tr>
 				<td>
 
-					<image src="pinkPacman.jpeg">
+					<image src="pinkPacman.png">
 
 				</td>
 				<td>
@@ -523,7 +520,7 @@
 			<tr>
 				<td>
 
-					<image src="lifepac.jpeg">
+					<image src="lifepac.png">
 
 				</td>
 				<td>
@@ -532,7 +529,7 @@
 			</tr>
 			<tr>
 				<td>
-					<image src="timePic.jpeg"></image>
+					<image src="timePic.png"></image>
 
 
 				</td>
