--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		<table width="21%">
 
 			<tr>
+			<td>	
+				
 				<td button id="Welcomebtn" onclick="WelcomeFunction()">
 					<me><u>Welcome</u></me>
 				</td>
@@ -47,6 +49,7 @@
 
 	</div>
 
+	
 	<div id="content">
 	</div>
 
@@ -60,7 +63,10 @@
 						</button>
 						<button id="Loginbutton" onclick="LoginFunction()">
 							<btn>Login </btn>
-						</button>			
+						</button>
+
+
+
 	</div>
 
 	<div id="footer">
@@ -509,8 +515,8 @@
 			<h2>Information:</h2>
 			<tr>
 				<td>
-
-					<image src="pinkPacman.png">
+				
+					<image src="pinkPacman.PNG">
 
 				</td>
 				<td>
@@ -520,7 +526,7 @@
 			<tr>
 				<td>
 
-					<image src="lifepac.png">
+					<image src="lifepac.PNG">
 
 				</td>
 				<td>
@@ -529,7 +535,7 @@
 			</tr>
 			<tr>
 				<td>
-					<image src="timePic.png"></image>
+					<image src="timePic.PNG"></image>
 
 
 				</td>
