--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 						<button id="Loginbutton" onclick="LoginFunction()">
 							<btn>Login </btn>
 						</button>		
+						<image src="pinkPacman.png">
 
 	</div>
 
