--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<title> PACMAN</title>
 	<link rel="stylesheet" type="text/css" href="layout.css" />
 	<script src="./jquery.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="./app.js"></script>
+	<script src="./app.js" type="text/javascript"></script>
 	<script src="./jquery-3.4.1.slim.min.js"></script>
+	<script src="./script.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-	<script src="script.js" type="text/javascript"></script>
+	
 </head>
 
 <body>
