--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<button id="Loginbutton" onclick="LoginFunction()">
 							<btn>Login </btn>
 						</button>		
-						<image src="pinkPacman.png">
+						//<image src="pinkPacman.png">
 
 	</div>
 
