--- a/index.html
+++ b/index.html
@@ -367,7 +367,28 @@
 
 	</table>
 
-	
+	<div id="game" style="visibility: hidden;">
+		<canvas id="canvas" width="900" height="600">
+
+			Your browser does not support the HTML5 canvas tag.
+			<button id="Backbtn" onclick="WelcomeFunction()">
+				<me><u>Back to main menu?</u></me>
+				<audio id="blockerSound" preload="auto">
+					<source src="Final Destination (Melee) - Super Smash Bros. Brawl.mp3" type="audio/mpeg"></audio>
+				<audio id="startSound" preload="auto">
+					<source src="8bit_start_vo_03.ogg" type="audio/mpeg"></audio>
+				<audio id="victorySound" preload="auto">
+					<source src="8bit_lead_vo_02.ogg" type="audio/mpeg"></audio>
+				<audio id="point50" preload="auto">
+					<source src="8bit_lead_vo_03.ogg" type="audio/mpeg"></audio>
+				<audio id="hurt" preload="auto">
+					<source src="8bit_hurt_vo_01.ogg" type="audio/mpeg"></audio>
+				<audio id="missionFailed" preload="auto">
+					<source src="8bit_die_vo_06.ogg" type="audio/mpeg"></audio>
+				<audio id="bounus_life" preload="auto">
+					<source src="8bit_reload_01.ogg" type="audio/mpeg"></audio>
+		</canvas>
+	</div>
 
 	<div id="settingsShown" style="visibility: hidden;">
 		<table height="40px;">
