--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
 	<title> PACMAN</title>
-	<link rel="stylesheet" type="text/css" href="layout.css" />
-	<script src="Jquery.js" type="text/javascript"></script>
-	<script src="app.js" type="text/javascript"></script>
-	<script src="jquery-3.4.1.slim.min.js"></script>
+	<link   rel="stylesheet" type="text/css" href="layout.css" />
+	<script src="jquery.js" type="text/javascript"></script>
 	<script src="script.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-	
+	<script src="app.js" 	type="text/javascript" "></script>
+	<script src="jquery-3.4.1.slim.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
 </head>
 
 <body>
@@ -61,7 +59,9 @@
 						</button>
 						<button id="Loginbutton" onclick="LoginFunction()">
 							<btn>Login </btn>
-						</button>		
+						</button>
+
+
 
 	</div>
 
@@ -101,7 +101,7 @@
 						<label> <b> Username: </b> </label>
 					</td>
 					<td>
-						<input id="logName" type="text" placeholder="Enter Username" value="p">
+						<input id="logName" type="text" placeholder="Enter Username" >
 					</td>
 				<tr>
 				<tr>
@@ -109,7 +109,7 @@
 						<label><b> Password: </b></label>
 					</td>
 					<td>
-						<input id="logPswd" type="password" placeholder="Enter Password" value="p">
+						<input id="logPswd" type="password" placeholder="Enter Password" >
 					</td>
 				<tr>
 				<tr>
@@ -388,6 +388,8 @@
 				<audio id="bounus_life" preload="auto">
 					<source src="8bit_reload_01.ogg" type="audio/mpeg"></audio>
 		</canvas>
+
+
 	</div>
 
 	<div id="settingsShown" style="visibility: hidden;">
@@ -510,7 +512,7 @@
 			<tr>
 				<td>
 
-					<image src="pinkPacman.png">
+					<image src="pinkPacman.jpeg">
 
 				</td>
 				<td>
@@ -520,7 +522,7 @@
 			<tr>
 				<td>
 
-					<image src="lifepac.png">
+					<image src="lifepac.jpeg">
 
 				</td>
 				<td>
@@ -529,7 +531,7 @@
 			</tr>
 			<tr>
 				<td>
-					<image src="timePic.png">
+					<image src="timePic.jpeg"></image>
 
 
 				</td>
