--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 			<p>
 				<b>These are our plugins:</b>
 				<br>
-				- ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js
+				- "ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
 				<br>
-				- ./jquery-3.4.1.slim.min.js"
+				- "jquery-3.4.1.slim.min.js"
 			</p>
 			<p>
 				<b>Difficulties we have encoutered during this project:</b>
